# SI23-BongoCat

./: .gitignore  README.md  pyproject.toml  setup.cfg
ejercicio3-PCA-tSNE/: ejercicio_3.ipynb
ejercicio4-kmeans-dbscan/: ejercicio_4.ipynb
ejercicio_0-intro/: (SI23_EI0)_Intro_a_google_colab.ipynb  (SI23_EI0)_Intro_a_google_colab_sol.ipynb  (SI23_EI1)_Intro_a_numpy.ipynb  (SI23_EI1)_Intro_a_numpy_sol.ipynb  comentarios.txt
ejercicio_1-LinearReg/: linear_regression.ipynb  linear_regression_sol.ipynb
ejercicio_2-LogisticReg/: ejercicio_2.ipynb  ejercicio_2_sol.ipynb
ejercicio_3-PCA-tSNE/: ejercicio_3.ipynb  ejercicio_3_sol.ipynb
ejercicio_4-kmeans-dbscan/: ejercicio_4.ipynb  ejercicio_4_sol.ipynb
ejercicio_5-MLP_reg/: mlp_reg.ipynb  mlp_reg_sol.ipynb
ejercicio_6-MLP_class/: mlp_class.ipynb  mlp_class_sol.ipynb
ejercicio_7-cnns/: cnn_classifier.ipynb  cnn_classifier_sol.ipynb
ejercicio_8-Q_learning/: agent.py  agent_sol.py
proyecto_1_ML/: proyecto_1_ML.ipynb
proyecto_2_DL/: README.MD  dataset.py  inferencia.py  network.py  plot_losses.py  training.py  utils.py
proyecto_2_DL/data/: README.md  split.json
proyecto_sign_language/dataset/: imageConverter.py  sign_language_recognition.ipynb  sign_mnist_custom.csv
proyectos_finales/models/: modelo_1.pt
proyectos_finales/traffic_sign_recognition/: dataset.py  network.py  plot_losses.py  test.py  train.py
proyectos_finales/traffic_sign_recognition/data/: README.md
