[metadata]
description = "Ejercicios para la materia de Sistemas Inteligentes"
author = "Jessica Borja, Erick Rosete"
author_email = "jessica.borja@cetys.mx, erick.rosete@cetys.mx>"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn
    opencv-python
    ipykernel
    ipympl
    notebook
